crates/snapshot-tests/tests/snapshots/parser__integer_range_negative.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: integer overflow at `a`
  ┌─ integer_range_negative:1:5
  │
1 │ a = -170141183460469231731687303715884105729
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow
